@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: ContextBrowser is now shown in proper colors for every scheme.
+  CHG: Added track's physical location to the Meta Information dialog.
   FIX: Show last playtime in localtime instead of UTC.
   FIX: ContextBrowser not showing all items for current album.
   FIX: Not all SQL queries were "string-escaped".
